# translator_nn

./: .gitignore  dummy.ipynb  pyproject.toml
config/: multilingual_tokenizer.json
src/: dataset.py  main.py  model.py  train.py
src/tools/: csv_swap_language_direction.ipynb  model_loader.py  statistics_sentence_length.ipynb  tmx_to_csv.py
