[project]
name = "translator-nn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "numpy>=2.2.6",
    "seaborn>=0.13.2",
    "standard-imghdr>=3.13.0",
    "tensorboard>=2.19.0",
    "tokenizers>=0.21.1",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
]
